--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -162,7 +123,7 @@
           <div class="mb-4">
             <h3 class="text-lg font-bold">{{ result.title }}</h3>
             <p class="text-gray-600" data-lang="en">Posted: {{ result.date | date: "%b %d, %Y" }}</p>
-            <p class="text-gray-600" data-lang="hi" style="display:none;">पोस्ट किया गया: {{ result.date | date: "%d %b, %Y" }}</p>
+            <p class="text-gray-600" data-lang="hi" style="display:none;">पोस्ट किया गया: {{ card.date | date: "%d %b, %Y" }}</p>
             <a href="{{ result.permalink }}" class="text-blue-500" data-lang="en">Details</a>
             <a href="{{ result.permalink }}" class="text-blue-500" data-lang="hi" style="display:none;">विवरण</a>
             <a href="{{ result.resultLink }}" class="text-green-500 ml-2" data-lang="en">Check Result</a>
